--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="social-media">
             <ul>
                 <li><a href="./index.html">Trang chủ</a></li>
-                <li><a href="#">Giải đấu</a></li>
+                <li><a href="https://www.facebook.com/HUST.EsportsClub/photos/a.1328156470568090/2582728885110836/?type=3&theater">Giải đấu</a></li>
                 <li><a href="https://www.facebook.com/HUST.EsportsClub">Fanpage</a></li>
                 <li><a href="https://www.youtube.com/channel/UCE3rXhFsMrmnvZRaAmy3Zig?view_as=subscriber">Youtube</a></li>
                 <li><a href="https://www.facebook.com/phaothu.london.1">Liên hệ</a></li>
@@ -30,6 +30,7 @@
         <img src="./LOGO.png" alt="logo">
         <h1>E-Sports Club of HUST</h1>
         <h2>CLB Thể Thao Điện Tử trường Đại học Bách Khoa Hà Nội</h2>
+        <h3><a href="./lichthidau.html">Lịch thi đấu</a></h3>
     </div>
     <div class="main">
         <div class="inner-main">
